# makefile-rust-wasm-ts-scss-example

./: .gitignore  Cargo.toml  README.md  setup.sh
wasm-async/: Cargo.toml
wasm-async/src/: lib.rs
wasm-async/tests/: node.rs  sys.rs  web.rs
wasm-sync/: Cargo.toml
wasm-sync/src/: lib.rs
www/: Makefile  babel.dev.config.js  babel.rel.config.js  package-lock.json  package.json  tsconfig.json
www/html/: index.html
www/scripts/: apply-css-renaming.js  build-css-renaming.js  build-wasm.sh  sync-dev.sh  sync-rel.sh  sync.sh
www/scss/: styles.scss
www/ts/: app.ts  async.ts  sync.ts  wasm_async.d.ts
