[package]
name = "wasm-sync"
version = "0.1.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2018"
description = "Web application example with Makefile, Rust-generated WASM, TypeScript and SCSS"
readme = "README.md"
repository = "https://github.com/zheland/makefile-rust-wasm-ts-scss-example"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
keywords = ["wasm"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.68"
wee_alloc = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
js-sys = { version = "0.3" }
wasm-bindgen-test = "0.3"
